--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/kanadle.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Kanadle | Hiragana Wordle</title>
+
+    <script>
+      ;(function () {
+        const isDark =
+          localStorage.getItem('theme') === 'dark' ||
+          (!localStorage.getItem('theme') &&
+            window.matchMedia('(prefers-color-scheme: dark)').matches)
+
+        if (isDark) {
+          document.documentElement.classList.add('dark')
+        }
+      })()
+    </script>
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Kanadle | Hiragana Wordle" />
